added : displaying of comments || pager for comments (local gesture, API doesn't give the possibility to get ressources with pagination params -- maybe later) || form to add a new comment -- used reactive forms of angular || some improves on style sheets || some refactoring
